--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,6 +5,7 @@
 html {
     font-size: 1em;
     padding: 0;
+    font-family: "Open Sans";
 }
 nav {
     position: fixed;
@@ -14,6 +15,7 @@ nav {
     background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0));
     background-image: linear-gradient(to bottom, rgba(0,0,0,0.5), rgba(0,0,0,0));
     padding: 1%;
+    font-family: "Open Sans", sans-serif;
 }
 nav a {
     display: block;
@@ -29,7 +31,7 @@ nav a {
     border-radius: 3px;
     text-align: center;
 }
-nav a:active {
+nav a.selected {
     border-color: white;
 }
 nav a:hover {
@@ -60,12 +62,25 @@ article {
     font-size: 1rem;
     text-align: left;
 }
+article img {
+    float: left;
+    border: 0px solid white;
+    border-radius: 10px;
+    margin: 10px;
+}
 article p {
     margin-top: 15px;
+    text-align: justify;
+    text-justify: inter-word;
 }
 article p.quote {
     text-align: center;
     font-weight: bold;
+}
+footer {
+    min-height: 50px;
+    background: #232323;
+    margin-top: 50px;
 }
 
 .clearfix {
