--- a/uncompiled/inc/nav.jade
+++ b/uncompiled/inc/nav.jade
@@ -7,5 +7,5 @@ nav
     a(href="#") Pesten
     a(href="#") Workshops
     a(href="#") Kalender
-    a(href="#") Contact
+    a(href="contact.html") Contact
     div(class="clearfix")
